added event mails

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ DATABASE_URL="mysql://raghav:Raghav_@_pass_1@127.0.0.1:3306/blog?serverVersion=8
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://wanderlust.we.009@gmail.com:XXXXXXXXXX@smtp.gmail.com:465
+ MAILER_DSN=smtp://wanderlust.we.009@gmail.com:XXXX@smtp.gmail.com:465
 ###< symfony/mailer ###
