--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "symfony/yaml": "5.2.*",
         "symfonycasts/reset-password-bundle": "^1.3",
         "symfonycasts/verify-email-bundle": "^1.1",
+        "twig/cssinliner-extra": "^3.2",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.2",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
